# xhs-cli

./: LICENSE  README.md  README_CN.md  SKILL.md  pyproject.toml
.github/workflows/: publish-clawhub.yml  publish.yml
scripts/: smoke_local.sh
tests/: test_auth.py
xhs_cli/: __init__.py  auth.py  cli.py  client.py
